--- a/login.html
+++ b/login.html
@@ -23,10 +23,9 @@
 
         .login-container {
             background: white;
-            padding: 50px;
+            padding: 40px;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            text-align: center;
             max-width: 400px;
             width: 100%;
         }
@@ -35,104 +34,124 @@
             color: #333;
             margin-bottom: 10px;
             font-size: 2em;
+            text-align: center;
         }
 
         .login-container p {
             color: #666;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
+            text-align: center;
         }
 
-        .google-btn {
-            background: white;
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            color: #333;
+            margin-bottom: 8px;
+            font-weight: 500;
+        }
+
+        .form-group input {
+            width: 100%;
+            padding: 12px;
             border: 2px solid #ddd;
-            padding: 15px 30px;
-            border-radius: 10px;
+            border-radius: 8px;
+            font-size: 1em;
+            transition: border-color 0.3s;
+        }
+
+        .form-group input:focus {
+            outline: none;
+            border-color: #667eea;
+        }
+
+        .login-btn {
+            width: 100%;
+            background: #667eea;
+            color: white;
+            border: none;
+            padding: 15px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 1.1em;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 15px;
-            transition: all 0.3s;
-            width: 100%;
+            font-weight: 600;
+            transition: background 0.3s;
+            margin-top: 10px;
         }
 
-        .google-btn:hover {
-            border-color: #667eea;
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
-            transform: translateY(-2px);
+        .login-btn:hover {
+            background: #5568d3;
         }
 
-        .google-icon {
-            width: 24px;
-            height: 24px;
+        .login-btn:disabled {
+            background: #ccc;
+            cursor: not-allowed;
         }
 
         .error-message {
             color: #dc3545;
-            margin-top: 20px;
-            padding: 10px;
+            margin-top: 15px;
+            padding: 12px;
             background: #ffe6e6;
-            border-radius: 5px;
+            border-radius: 8px;
             display: none;
+            text-align: center;
         }
 
-        .loading {
+        .success-message {
+            color: #28a745;
+            margin-top: 15px;
+            padding: 12px;
+            background: #d4edda;
+            border-radius: 8px;
+            display: none;
+            text-align: center;
+        }
+
+        .link-text {
+            text-align: center;
             margin-top: 20px;
-            color: #667eea;
-            display: none;
-        }
-
-        .info-box {
-            background: #f8f9fa;
-            padding: 20px;
-            border-radius: 10px;
-            margin-top: 30px;
-            text-align: left;
-        }
-
-        .info-box h3 {
-            color: #333;
-            margin-bottom: 10px;
-            font-size: 1.1em;
-        }
-
-        .info-box ul {
-            margin-left: 20px;
             color: #666;
         }
 
-        .info-box li {
-            margin: 5px 0;
+        .link-text a {
+            color: #667eea;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        .link-text a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <div class="login-container">
         <h1>💰 자산 관리</h1>
-        <p>구글 계정으로 로그인하세요</p>
+        <p>이메일과 비밀번호로 로그인하세요</p>
 
-        <button class="google-btn" id="googleLoginBtn">
-            <svg class="google-icon" viewBox="0 0 24 24">
-                <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
-                <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
-                <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
-                <path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
-            </svg>
-            Google로 로그인
-        </button>
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="email">이메일</label>
+                <input type="email" id="email" required placeholder="example@email.com">
+            </div>
 
-        <div class="loading" id="loading">로그인 중...</div>
+            <div class="form-group">
+                <label for="password">비밀번호</label>
+                <input type="password" id="password" required placeholder="비밀번호 입력">
+            </div>
+
+            <button type="submit" class="login-btn" id="loginBtn">로그인</button>
+        </form>
+
         <div class="error-message" id="errorMessage"></div>
+        <div class="success-message" id="successMessage"></div>
 
-        <div class="info-box">
-            <h3>✨ 주요 기능</h3>
-            <ul>
-                <li>실시간 자산 현황 동기화</li>
-                <li>카테고리별 자산 관리</li>
-                <li>시각적 차트 및 통계</li>
-                <li>두 명이 함께 관리 가능</li>
-            </ul>
+        <div class="link-text">
+            계정이 없으신가요? <a href="signup.html">회원가입</a>
         </div>
     </div>
 
